<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mysellingsbackground"
    android:padding="10dp"
    tools:context=".UserInterfaceIt20149994Activity">

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvDeviceName"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDeviceName"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/etDeviceName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceName" />

    <TextView
        android:id="@+id/tvManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/tvManufacturer"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeviceName" />

    <EditText
        android:id="@+id/etManufacturer"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/etManufacturer"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvManufacturer" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/tvYear"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etManufacturer" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/tvPrice"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYear" />

    <TextView
        android:id="@+id/tvSpecialNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/tvSpecialNotes"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <EditText
        android:id="@+id/etSpecialNotes"
        android:layout_width="284dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:hint="@string/etSpecialNotes"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecialNotes" />

    <Button
        android:id="@+id/btnDisplayAll"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/btnDisplayAll"
        android:onClick="viewAll"
        android:text="@string/btnDisplayAll"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:backgroundTint="#2AF598"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSpecialNotes" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/btnAdd"
        android:onClick="savePhone"
        android:text="@string/btnAdd"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/btnUpdate"
        android:onClick="updatePhone"
        android:text="@string/btnUpdate"
        android:textAllCaps="false"
        app:backgroundTint="#4CAF50"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplayAll" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/btnDelete"
        android:onClick="deletePhone"
        android:text="@string/btnDelete"
        android:textAllCaps="false"
        app:backgroundTint="#E91E63"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnUpdate"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate" />

    <EditText
        android:id="@+id/etDeviceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnDisplayAll"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/etYear"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYear" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="284dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/etPrice"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>