<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home2"
    android:onClick="logout"
    tools:context=".home">

    <Button
        android:id="@+id/btn_home1"
        android:layout_width="338dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn"
        android:onClick="openWallet"
        android:text="@string/btn_home1"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#2AF598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home3" />

    <Button
        android:id="@+id/btn_home2"
        android:layout_width="338dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_btn"
        android:onClick="openProducts"
        android:text="@string/btn_home2"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#2AF598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/btn_home3"
        android:layout_width="338dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn"
        android:onClick="logInUser"
        android:text="@string/btn_home3"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home2" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home1" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginLeft="276dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_btn2"
        android:onClick="logout"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="338dp"
        android:layout_height="267dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3" />


</androidx.constraintlayout.widget.ConstraintLayout>