<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@drawable/register">

    <EditText
        android:id="@+id/brand_input"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:background="#C0D6E1"
        android:ems="10"
        android:hint="Mobile Brand(Ex: Samsung Galaxy)"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text1" />

    <EditText
        android:id="@+id/model_input"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:background="#C0D6E1"
        android:ems="10"
        android:hint="Mobile Model(Ex: A71)"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text2" />

    <EditText
        android:id="@+id/condition_input"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:background="#C0D6E1"
        android:ems="10"
        android:hint="Condition(Ex: New/Use)"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text3" />

    <EditText
        android:id="@+id/price_input"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:background="#C0D6E1"
        android:ems="10"
        android:hint="Price(Rs 75,000)"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text4" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:background="#C0D6E1"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text5" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#2AF598"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="88dp"
        android:text="@string/tv_text1"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_text2"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_input" />

    <TextView
        android:id="@+id/tv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_text3"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_input" />

    <TextView
        android:id="@+id/tv_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_text4"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_input" />

    <TextView
        android:id="@+id/tv_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_text5"
        android:textColor="#A8000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input" />
</androidx.constraintlayout.widget.ConstraintLayout>